--- a/template.yaml
+++ b/template.yaml
@@ -183,18 +183,10 @@ spec:
                     title: AWS Region
                     type: string
                     description: AWS region for the S3 bucket
-                    default: us-east-1
+                    default: eu-west-2
                     enum:
-                      - us-east-1
-                      - us-east-2
-                      - us-west-1
-                      - us-west-2
-                      - eu-west-1
                       - eu-west-2
-                      - eu-central-1
-                      - ap-southeast-1
-                      - ap-southeast-2
-                      - ap-northeast-1
+                      - eu-west-1
                   enable_github_secrets:
                     title: Use GitHub Secrets for AWS Credentials?
                     type: boolean
@@ -234,7 +226,7 @@ spec:
       name: Show Context
       action: debug:log
       input:
-        message: ${{ user }}
+        message: ${{ user | dump }}
 
     - id: publish
       name: Publish
