--- a/template.yaml
+++ b/template.yaml
@@ -236,6 +236,7 @@ spec:
         description: ${{ parameters.repository_description }}
         repoVisibility: ${{ parameters.repository_visibility }}
         defaultBranch: ${{ parameters.default_branch }}
+        access: ${{ user.entity.metadata.annotations['github.com/user-login'] }}
   
         hasIssues: true
         hasProjects: false
@@ -269,14 +270,6 @@ spec:
       input:
         repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
         catalogInfoPath: /catalog-info.yaml
-
-    - id: add-collaborator
-      name: Add Creator as Collaborator
-      action: github:repo:add-collaborator
-      input:
-        repoUrl: github.com?owner=${{ parameters.repository_owner }}&repo=${{ parameters.repository_name }}
-        username: ${{ user.entity.metadata.annotations['github.com/user-login'] }}
-        permission: admin
 
   output:
     links:
