--- a/scripts/package_manager_helper/pyproject.toml
+++ b/scripts/package_manager_helper/pyproject.toml
@@ -10,7 +10,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^2.3.1"
-boto3 = "^1.39.10"
+boto3 = "^1.39.11"
 jinja2 = "^3.1.6"
 copier = "^9.8.0"
 
@@ -53,6 +53,8 @@ ignore = [
     # Too many args in functions
     "PLR0913"
 ]
+
+line-length = 150
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
