--- a/template.yaml
+++ b/template.yaml
@@ -273,12 +273,10 @@ spec:
 
   output:
     links:
-      - title: Repository
+      - title: Open in GitHub
         url: ${{ steps.publish.output.remoteUrl }}
-      - title: Open in catalog
+      - title: Open in Backstage
         icon: catalog
         entityRef: ${{ steps.register.output.entityRef }}
-      - title: Open in TechDocs
-        url: ${{ steps.publish.output.techDocsUrl }}
-      - title: Open S3 Website
-        url: https://${{ s3_bucket_name }}.${{ aws_region }}.amazonaws.com/${{ parameters.repository_name }}/index.html
+      - title: Open Static Website
+        url: https://${{ parameters.s3_bucket_name }}.${{ parameters.aws_region }}.amazonaws.com/${{ parameters.repository_name }}/index.html
