--- a/template.yaml
+++ b/template.yaml
@@ -12,7 +12,7 @@ metadata:
     backstage.io/techdocs-ref: dir:.
 spec:
   owner: "group:default/spotify-backstage-trial-team"
-  type: python
+  type: end-to-end
 
   parameters:
     - title: Basic Settings
